# BuoyyVoxel

./: .gitattributes  .gitignore  CMakeLists.txt  CommitPlan.md  README.md  build.bat  build.sh  build_!msvc.bat  build_msvc.bat
ext/glad/: glad.h
res/shaders/: colored_cube.vert  simple.frag  simple.vert  textured_cube.frag  textured_cube.vert  textured_quad.frag  textured_quad.vert
src/: glad.c  main.c
src/engine/core/: game.c  game.h  input.c  input.h  time.c  time.h
src/engine/render/: camera.c  camera.h  element_buffer.c  element_buffer.h  mesh.c  mesh.h  primitives.c  primitives.h  shader.c  shader.h  texture.c  texture.h  vertex.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
src/engine/render/backend/: element_buffer.c  element_buffer.h  mesh.c  mesh.h  primitives.c  primitives.h  shader.c  shader.h  texture.c  texture.h  vertex.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
src/engine/render/resources/: mesh.c  mesh.h  texture_atlas.c  texture_atlas.h
src/engine/util/: assert.c  assert.h  common.h  dyn_array.c  dyn_array.h  file.c  file.h  log.c  log.h  path.c  path.h
src/engine/world/: block.h  block_registry.c  block_registry.h  camera.c  camera.h  chunk.c  chunk.h  transform.c  transform.h
src/platform/opengl/: gl_context.c  gl_context.h  gl_debug.c  gl_debug.h
src/platform/window/: window.c  window.h
src/tests/: cube_test.c  cube_test.h  quad_test.c  quad_test.h  triangle_test.c  triangle_test.h
